# bloodin

./: .gitattributes  .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_cache.rs  audio_player.rs  commands.rs  jellyfin.rs  lib.rs  main.rs  storage.rs
src/components/: AlbumCard.tsx  ArtistLinks.tsx  DetailView.tsx  FullscreenPlayer.tsx  ImagePlaceholder.tsx  Layout.tsx  LoadingSkeleton.tsx  MainContent.tsx  PlayerBar.tsx  QuickAccessCard.tsx  SearchBar.tsx  Sidebar.tsx  SongCard.tsx  SongRow.tsx  SongsTable.tsx  TitleBar.tsx
src/components/PlayerBar/: ClickableArtists.tsx  NowPlayingInfo.tsx  PlayerBar.tsx  PlayerControls.tsx  ProgressBar.tsx  QueuePanel.tsx  RecentSongsPanel.tsx  VolumeControls.tsx  index.ts
src/contexts/: AudioPlayerContext.tsx  AuthContext.tsx
src/pages/: AlbumsPage.tsx  ArtistsPage.tsx  HomePage.tsx  LoginPage.tsx  PlaylistsPage.tsx  SearchPage.tsx  SettingsPage.tsx  SongsPage.tsx
src/services/: audioPlayerApi.ts  cacheService.ts  jellyfinApi.ts  queueManager.ts
src/types/: index.ts  jellyfin.ts  queue.ts
